# Wanna-Develop-An-App

./: .gitignore  README.md  build.bat  start.bat
ai-architect/: .env.example  README.md  index.html  package-lock.json  package.json
ai-architect-backend/: .env.example  README.md  docker-compose.yml  mvnw  mvnw.cmd  pom.xml  start.bat
ai-architect-backend/src/main/java/com/aiarchitect/: AiArchitectApplication.java
ai-architect-backend/src/main/java/com/aiarchitect/config/: AppConfig.java  AuthConfig.java  DotenvEnvironmentPostProcessor.java  JwtService.java  ProviderProperties.java  (+1 more)
ai-architect-backend/src/main/resources/: application.yml
ai-architect-backend/src/main/resources/db/migration/: V1__init.sql
ai-architect-python/: README.md  main.py  requirements.txt
ai-architect-python/browser/: researcher.py  routes.py
ai-architect-python/executor/: routes.py  sandbox.py  vuln_scanner.py
ai-architect/src/: App.jsx
ai-architect/src-tauri/: Cargo.toml  tauri.conf.json
ai-architect/src-tauri/capabilities/: default.json
ai-architect/src-tauri/src/: lib.rs  main.rs
ai-architect/src/components/Content/: ContentArea.jsx  MarkdownRenderer.jsx
ai-architect/src/components/Controls/: BackendStatus.jsx  HistoryPanel.jsx  RecoveryBanner.jsx  TabBar.jsx
ai-architect/src/components/Metrics/: StatsPanel.jsx
ai-architect/src/components/Sidebar/: Sidebar.jsx
ai-architect/src/components/TopBar/: TopBar.jsx
ai-architect/src/config/: phases.js
ai-architect/src/hooks/: useAuth.js  useOrchestrator.js  useSessionRecovery.js
ai-architect/src/utils/: api.js
(+27 files in other folders)
